--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@vuepic/vue-datepicker": "^11.0.1",
+    "vue": "^3.5.13",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "lucide-vue-next": "^0.358.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
